Thu Feb  5 22:05:52 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkfilesystemunix.c (bookmark_list_read): Initialize result
	to FALSE.  (#133539, Morten Welinder)

Thu Feb  5 21:36:43 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_set_active_iter): Fix the logic
	of the depth one check.  (#133488, Christian Persch)

Thu Feb  5 01:50:19 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktearoffmenuitem.c (gtk_tearoff_menu_item_paint): Fix
	the drawing of tearoff menu items which don't come first in their
	menu.  (#33311)

Thu Feb  5 00:59:08 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombo.c (gtk_combo_entry_key_press): Use 
	g_completion_complete_utf8(). (#133313, Theppitak Karoonboonyanan)

2004-02-04  Federico Mena Quintero  <federico@ximian.com>

	Fix #59707.

	* gtk/gtklabel.c (gtk_label_focus): Removed, so we don't ignore
	the focus chain.
	(gtk_label_button_press): Fix prototype.
	(gtk_label_button_release): Likewise.
	(gtk_label_motion): Likewise.

	* tests/testgtk.c (create_message_dialog): For the dialog with
	only GTK_BUTTONS_CLOSE, make GTK_RESPONSE_CLOSE the default.

2004-02-04  Morten Welinder  <terra@gnome.org>

	* gtk/gtktoolbar.c (show_menu): Show on the right screen.  (Fixes
	bug 133411, apart from the leak.)

Tue Feb  3 13:39:27 2004  Manish Singh  <yosh@gimp.org>

	* gtk/gtkadjustment.c (gtk_adjustment_new): pass value in last
	in g_object_new, since it depends on lower and upper being set.

2004-02-03  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkmessagedialog.c (gtk_message_dialog_init): Make the
	window not resizable.  Fixes #114032.

2004-02-03  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkmessagedialog.c (gtk_message_dialog_class_init): Add
	documentation for the use_separator style property.

2004-02-03  Federico Mena Quintero  <federico@ximian.com>

	Fix #68938.

	* gtk/gtkdialog.c (GtkDialogPrivate): New private structure for